editing the update fb token methods
